# pigmeu

./: .env  .env.example  ANALISE_PROBLEMAS_SISTEMA.md  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_seed.py  test_api_simple.py  test_approval_endpoints.py
.continue/agents/: pigmeu-copilot.yaml
.continue/prompts/: docs.md  new-prompt-1.md  new-prompt.md
.continue/rules/: auto-approve-terminal-commands.md  ntinue-ai-documentation-policy.md  segmentation.md  task-segmentation.md  use-chain-of-tougth.md
.github/agents/: CONTI.agent.md
config/: article-generation-config.yaml
docs/: ANÁLISE_FEATURES_PENDENTES.md  ARCHITECTURE.md  ARTICLE_PATTERNS_DOCUMENTATION.md  IMPLEMENTACAO_DETALHADA.md  README.md  SESSION_KNOWLEDGE_BASE.md  api.md  arquitetura.md  melhorias-ui-ux.md  modelo-de-dados.md  novas-implementacoes-melhorias.md  requisitos.md
docs/01_requisitos/: criterios-de-aceite.md  requisitos-sistema.md  ui-web.md
docs/03_api/: contratos-api.md  erros-e-codigos.md
docs/04_dados/: indices-e-migracoes.md  modelo-de-dados.md
docs/05_modulos/: article-generation.md  credentials.md  prompts.md  (+1 more)
infra/: Dockerfile  Dockerfile.worker  docker-compose.yml
plan/: re-plan.md
reqs/: copilot-books.md
scripts/: check_prompts.py  migrate.py  migrate_ai_models.py  seed_content_schema.py  seed_prompts.py  test_article_generation.py
src/: __init__.py  app.py  config.py  logger.py
tests/: conftest.py  test_app.py  test_article_structurer.py  test_ingest.py  test_llm_client.py  test_scrapers.py  test_src.py  test_tasks_queueing.py
(+111 files in other folders)
